--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html>
 
 <head>
+  <!-- Primary Meta Tags -->
   <title>Buen Partido</title>
+  <meta name="title" content="Buen Partido">
+  <meta name="description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://1cgonza.github.io/buen-partido/">
+  <meta property="og:title" content="Buen Partido">
+  <meta property="og:description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
+  <meta property="og:image" content="./imgs/og.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://1cgonza.github.io/buen-partido/">
+  <meta property="twitter:title" content="Buen Partido">
+  <meta property="twitter:description"
+    content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
+  <meta property="twitter:image" content="./imgs/og.jpg">
+
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="apple-touch-icon" sizes="57x57" href="./imgs/apple-icon-57x57.png">
@@ -45,6 +64,7 @@
         </span>
       </div>
       <h1>buen partido</h1>
+      <h2>de la #BusetaElectoral</h2>
       <span class="gris"></span>
       <span class="lineas"></span>
     </div>
@@ -134,7 +154,7 @@
         <label for="p1o2">No</label>
       </form>
 
-      <form id="pregunta2" class="pregunta" data-categoria="sexo" data-tipo="1">
+      <!-- <form id="pregunta2" class="pregunta" data-categoria="sexo" data-tipo="1">
         <h3>
           ¿Está de acuerdo con crear una política pública para combatir el
           <span class="info-link">acoso callejero</span> hacia mujeres y
@@ -153,9 +173,9 @@
         <label for="p2o1">Sí</label>
         <input id="p2o2" name="p2" type="checkbox" value="no" />
         <label for="p2o2">No</label>
-      </form>
+      </form> -->
 
-      <form id="pregunta3" class="pregunta" data-categoria="sexo" data-tipo="1">
+      <!-- <form id="pregunta3" class="pregunta" data-categoria="sexo" data-tipo="1">
         <h3>
           ¿Está de acuerdo con que debe haber cátedras de
           <span class="info-link">educación sexual y reproductiva</span> en
@@ -174,7 +194,7 @@
         <label for="p3o1">Sí</label>
         <input id="p3o2" name="p3" type="checkbox" value="no" />
         <label for="p3o2">No</label>
-      </form>
+      </form> -->
 
       <form id="pregunta4" class="pregunta" data-categoria="sexo" data-tipo="1">
         <h3>
@@ -198,7 +218,7 @@
         <input id="p4o3" name="p4" type="checkbox" value="siif" />
         <label for="p4o3">Sí, solo si hay pruebas</label>
       </form>
-
+      <!-- 
       <form id="pregunta5" class="pregunta" data-categoria="sexo" data-tipo="1">
         <h3>
           Para usted, <span class="info-link">"ideología de género"</span> es
@@ -218,7 +238,7 @@
         <label for="p5o2">Homosexualidad</label>
         <input id="p5o3" name="p5" type="checkbox" value="c" />
         <label for="p5o3">Feminismo</label>
-      </form>
+      </form> -->
 
       <form id="pregunta6" class="pregunta" data-categoria="sexo" data-tipo="1">
         <h3>
@@ -298,7 +318,7 @@
         </div>
       </div>
 
-      <form id="pregunta7" class="pregunta" data-categoria="ciudad" data-tipo="2">
+      <!-- <form id="pregunta7" class="pregunta" data-categoria="ciudad" data-tipo="2">
         <h3>
           En su opinión, en Bogotá no hay
           <span class="info-link">baños públicos</span> por:
@@ -320,7 +340,7 @@
         <label for="p7o3">El deterioro al patrimonio urbano</label>
         <input id="p7o4" type="checkbox" name="p7" value="d" />
         <label for="p7o4">La inseguridad</label>
-      </form>
+      </form> -->
 
       <form id="pregunta8" class="pregunta" data-categoria="ciudad" data-tipo="2">
         <h3>
@@ -435,7 +455,7 @@
         </div>
       </div>
 
-      <form id="pregunta11" class="pregunta" data-categoria="drogas" data-tipo="orden">
+      <!-- <form id="pregunta11" class="pregunta" data-categoria="drogas" data-tipo="orden">
         <h3>
           ¿Qué orden de importancia de 1 a 5 (donde 1 es el más importante y 5,
           el menos importante) le daría a estas soluciones de los problemas de
@@ -454,7 +474,6 @@
           Puede ordenar los elementos arrastrandolos de arriba a abajo hasta
           obtener el orden deseado
         </p>
-        <!--Sírvase de ordenar los elementos-->
         <ol class="sortable">
           <li class="order-element" data-value="a">
             Más programas socio-culturales
@@ -470,7 +489,7 @@
             Más programas de educación y orientación para los jóvenes
           </li>
         </ol>
-      </form>
+      </form> -->
 
       <form id="pregunta12" class="pregunta" data-categoria="drogas" data-tipo="2NN">
         <h3>
@@ -571,7 +590,7 @@
         </div>
       </div>
 
-      <form id="pregunta14" class="pregunta" data-categoria="violencia" data-tipo="3">
+      <!-- <form id="pregunta14" class="pregunta" data-categoria="violencia" data-tipo="3">
         <h3>
           Para usted, el éxito de la Policía en
           <span class="info-link">Bogotá</span> se debería medir según:
@@ -607,7 +626,7 @@
           (CTP) donde se retienen en celdas hasta por 12 horas si la Policía
           considera que están en peligro
         </label>
-      </form>
+      </form> -->
 
       <form id="pregunta15" class="pregunta" data-categoria="violencia" data-tipo="1">
         <h3>
@@ -661,7 +680,7 @@
         <label for="p16o4">Debe permanecer tal cual está</label>
       </form>
 
-      <form id="pregunta17" class="pregunta" data-categoria="violencia" data-tipo="2NN">
+      <!-- <form id="pregunta17" class="pregunta" data-categoria="violencia" data-tipo="2NN">
         <h3>
           En Bogotá, la Policía le impuso un comparendo a una pareja del mismo
           sexo por besarse en el Centro Comercial
@@ -674,9 +693,6 @@
                 target="_blank">elcolombiano.com/redes-sociales/denuncian-discriminacion-contra-gays-en-centro-comercial-andino-BA10547420</a>
             </p>
           </div>
-          <!--
-            -->
-          <!--Sírvase de escoger máximo dos respuestas-->
         </h3>
 
         <input id="p17o1" name="p17" type="checkbox" value="a" />
@@ -704,7 +720,7 @@
         <label for="p17ot">
           Ninguna de las anteriores
         </label>
-      </form>
+      </form> -->
 
       <form id="pregunta18" class="pregunta" data-categoria="violencia" data-tipo="2NN">
         <h3>
@@ -838,7 +854,7 @@
         <label for="p21o2">No</label>
       </form>
 
-      <form id="pregunta22" class="pregunta" data-categoria="personal" data-tipo="1">
+      <!-- <form id="pregunta22" class="pregunta" data-categoria="personal" data-tipo="1">
         <h3>
           ¿Ha utilizado alguna vez aplicaciones de transporte como Uber, Beat,
           DiDi, Picap, Cabify o <span class="info-link">similares?</span>
@@ -856,7 +872,7 @@
         <label for="p22o1">Sí</label>
         <input id="p22o2" name="p22" type="checkbox" value="no" />
         <label for="p22o2">No</label>
-      </form>
+      </form> -->
 
       <form id="pregunta23" class="pregunta" data-categoria="personal" data-tipo="1">
         <h3>
@@ -923,7 +939,7 @@
           Bogotá, Antanas Mockus</label>
       </form>
 
-      <form id="pregunta 24" class="pregunta" data-categoria="personal" data-tipo="1">
+      <!-- <form id="pregunta 24" class="pregunta" data-categoria="personal" data-tipo="1">
         <h3>
           Telenovela colombiana <span class="info-link">favorita:</span>
 
@@ -965,7 +981,7 @@
         <label for="p24o2">Betty la fea</label>
         <input id="p24o3" type="checkbox" name="p24" value="c" />
         <label for="p24o3"> Café con aroma de mujer</label>
-      </form>
+      </form> -->
       <!-- ....:::: FIN 6. PERSONAL ::::.... -->
     </section>
   </div>
@@ -1026,6 +1042,8 @@
         <a href="https://ceper.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-ceper.png" alt="ceper" /></a>
         <a href="https://cerosetenta.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-cerosetento.png"
             alt="cerosetenta" /></a>
+        <a href="https://twitter.com/hashtag/busetaelectoral" target="_blank"><img src="./imgs/logo-la-buseta.svg"
+            alt="#BusetaElectoral" /></a>
         <a href="https://www.temblores.org/" target="_blank"><img src="./imgs/logo-temblores.png" alt="temblores" /></a>
         <a href="http://www.extituto.org/" target="_blank"><img src="./imgs/logo-extituto.png" alt="exituto" /></a>
         <a href="https://www.fes-colombia.org/" target="_blank"><img src="./imgs/logo-fescol.png" alt="fescol" /></a>
@@ -1036,6 +1054,24 @@
     </div>
     <span class="lines"></span>
   </div>
+
+  <footer>
+    <div class="logos">
+      <a href="https://facartes.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-facartes.png"
+          alt="Facartes" /></a>
+      <a href="https://ceper.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-ceper.png" alt="ceper" /></a>
+      <a href="https://cerosetenta.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-cerosetento.png"
+          alt="cerosetenta" /></a>
+      <a href="https://twitter.com/hashtag/busetaelectoral" target="_blank"><img src="./imgs/logo-la-buseta.svg"
+          alt="#BusetaElectoral" /></a>
+      <a href="https://www.temblores.org/" target="_blank"><img src="./imgs/logo-temblores.png" alt="temblores" /></a>
+      <a href="http://www.extituto.org/" target="_blank"><img src="./imgs/logo-extituto.png" alt="exituto" /></a>
+      <a href="https://www.fes-colombia.org/" target="_blank"><img src="./imgs/logo-fescol.png" alt="fescol" /></a>
+      <a href="http://peaceworks.se/colombia/" target="_blank"><img src="./imgs/logo-peaceworks.png"
+          alt="peaceworks" /></a>
+      <a href="http://cpatong.com/" target="_blank"><img src="./imgs/logo-cpat.png" alt="CPAT" /></a>
+    </div>
+  </footer>
 
   <script src="./js/fileSaver.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
