--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://1cgonza.github.io/buen-partido/">
   <meta property="og:title" content="Buen Partido">
   <meta property="og:description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
-  <meta property="og:image" content="./imgs/og.jpg">
+  <meta property="og:image" content="https://1cgonza.github.io/buen-partido//imgs/og.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -20,7 +20,7 @@
   <meta property="twitter:title" content="Buen Partido">
   <meta property="twitter:description"
     content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
-  <meta property="twitter:image" content="./imgs/og.jpg">
+  <meta property="twitter:image" content="https://1cgonza.github.io/buen-partido/imgs/og.jpg">
 
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
