incluir app id fb

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta property="og:title" content="Buen Partido">
   <meta property="og:description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
   <meta property="og:image" content="https://1cgonza.github.io/buen-partido//imgs/og.jpg">
+  <meta property="fb:app_id" content="481310545785663">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
