--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <!-- Primary Meta Tags -->
   <title>Buen Partido</title>
   <meta name="title" content="Buen Partido">
@@ -12,7 +13,7 @@
   <meta property="og:url" content="https://1cgonza.github.io/buen-partido/">
   <meta property="og:title" content="Buen Partido">
   <meta property="og:description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
-  <meta property="og:image" content="https://1cgonza.github.io/buen-partido//imgs/og.jpg">
+  <meta property="og:image" content="https://1cgonza.github.io/buen-partido/imgs/og.jpg">
   <meta property="fb:app_id" content="481310545785663">
 
   <!-- Twitter -->
@@ -987,24 +988,13 @@
     </section>
   </div>
 
-  <div id="res">
-    <canvas id="canvas"></canvas>
-
-    <div id="compartir" class="inline">
-      <span class="inline">Compartir:</span>
-      <span id="share-fb" class="inline inline-link"></span>
-    </div>
-
-    <div id="download-img" class="inline inline-link"></div>
-  </div>
-
   <div id="info">
     <div class="content">
       <div id="close">X</div>
       <p>Escoja a su Buen Partido para la alcadía de Bogotá con la <span class="hashtag">#BusetaElectoral</span></p>
-      <p>Si los debates y los discursos de los candidatos a la alcaldía de Bogotá no lo convencen sobre quién votar, le
-        tenemos una solución. Buen Partido es un aplicativo para medir su afinidad con los candidatos en temas de
-        género, consumo, violencia policial y derecho a la ciudad.</p>
+      <p><em>Si los debates y los discursos de los candidatos a la alcaldía de Bogotá no lo convencen sobre quién votar,
+          le tenemos una solución. Buen Partido es un aplicativo para medir su afinidad con los candidatos en temas de
+          género, consumo, violencia policial y derecho a la ciudad.</em></p>
       <p>Parece que lo único que importa para estas elecciones es si el metro va por arriba o por abajo de la tierra. O
         quien es peñalosista y quien no. ¿Y el resto de los temas? Cerosetenta se montó en la #BusetaElectoral, una
         propuesta de Temblores ONG que busca impulsar la participación ciudadana y a la difusión de información
@@ -1020,22 +1010,13 @@
         candidatos en temas de justicia social.</p>
       <p>Esta herramienta la construyó un equipo de estudiantes del Centro de Estudios en Periodismo de la Universidad
         de los Andes que pertenecen tanto a la carrera en pregrado de Narrativas Digitales, como a la maestría en
-        Periodismo y al semillero de periodismo en la revista Cerosetenta. Todos ellos trabajaron en un semillero de
+        Periodismo y al semillero de periodismo en la revista Cerosetenta. Ellos son David Esteban Angulo, Camila
+        Alejandra Bolivar, Sara Cely, Liliana Andrea Cobos y Catalina Giraldo. Todos ellos trabajaron en un semillero de
         programación digital para crear Buen Partido bajo el liderazgo del profesor del Ceper, Juan Camilo González.</p>
       <p>Es, además, el producto de una alianza de varias organizaciones que se unieron en una iniciativa imparcial que
         se fundamenta en la pedagogía electoral sin filiaciones partidistas. Somos Temblores ONG y Fescol, a las que se
         sumaron la revista Cerosetenta, Extituto, PeaceWorks Sweden y el Centro de Pensamiento y acción para la
         transición (CPAT).</p>
-
-      <h3>Participantes</h3>
-      <ul>
-        <li>Natalia Arenas</li>
-        <li>David Esteban Angulo</li>
-        <li>Camila Alejandra Bolivar</li>
-        <li>Sara Cely</li>
-        <li>Liliana Andrea Cobos</li>
-        <li>Catalina Giraldo</li>
-      </ul>
 
       <div id="logos">
         <a href="https://facartes.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-facartes.png"
