--- a/0.html
+++ b/0.html
@@ -10,7 +10,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://1cgonza.github.io/buen-partido/">
+  <meta property="og:url" content="https://1cgonza.github.io/buen-partido/0.html">
   <meta property="og:title" content="Buen Partido">
   <meta property="og:description" content="Mi buen partido es HOLLMAN MORRIS">
   <meta property="og:image" content="https://1cgonza.github.io/buen-partido//imgs/miBuenPartidoesHOLLMAN-MORRIS.jpg">
@@ -18,7 +18,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://1cgonza.github.io/buen-partido/">
+  <meta property="twitter:url" content="https://1cgonza.github.io/buen-partido/0.html">
   <meta property="twitter:title" content="Buen Partido">
   <meta property="twitter:description" content="Mi buen partido es HOLLMAN MORRIS">
   <meta property="twitter:image"
