--- a/0.html
+++ b/0.html
@@ -48,22 +48,9 @@
 </head>
 
 <body>
-
-
-  <div id="res">
-    <div id="canvas"><img src="https://1cgonza.github.io/buen-partido/imgs/miBuenPartidoesHOLLMAN-MORRIS.jpg" alt="">
-    </div>
-
-    <div id="compartir" class="inline">
-      <span class="inline">Compartir:</span>
-      <span id="share-fb" class="inline inline-link"></span>
-    </div>
-
-    <span id="download-img" class="inline inline-link"></span>
-  </div>
-
-  <script src="./js/fileSaver.min.js"></script>
-  <script src="./js/scripts0.js"></script>
+  <script>
+    window.location.href = "https://localhost:3000";
+  </script>
 </body>
 
 </html>
