--- a/index.html
+++ b/index.html
@@ -1037,6 +1037,17 @@
     <span class="lines"></span>
   </div>
 
+  <div id="res">
+    <div id="canvas"></div>
+
+    <div id="compartir" class="inline">
+      <span class="inline">Compartir:</span>
+      <span id="share-fb" class="inline inline-link"></span>
+    </div>
+
+    <span id="download-img" class="inline inline-link"></span>
+  </div>
+
   <footer>
     <div class="logos">
       <a href="https://facartes.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-facartes.png"
