--- a/index.html
+++ b/index.html
@@ -1041,8 +1041,11 @@
     <div id="canvas"></div>
 
     <div id="compartir" class="inline">
-      <span class="inline">Compartir:</span>
+      <span class="inline share-title">Compartir:</span>
       <span id="share-fb" class="inline inline-link"></span>
+      <span id="share-twitter" class="inline inline-link">
+      </span>
+
     </div>
 
     <span id="download-img" class="inline inline-link"></span>
