textos de posibles respuestas

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
       <div class="section-title">
         <h2>Sexo y Género</h2>
         <div class="descripcion-categoria">
-          <p>
+          <p>Estas preguntas se refieren a los derechos humanos de las mujeres y de las personas con orientaciones e identidades de género diversas.</p>
+          <!-- <p>
             El Área de Sexo y Género de Temblores ONG* busca defender los
             derechos humanos de las mujeres y personas con orientaciones
             sexuales e identidades de género diversas, teniendo en cuenta
@@ -128,7 +129,7 @@
             información, remítase a:
             <a href="https://www.temblores.org/?fbclid=IwAR3y2cYkk_VbpQSP4TaPFQK-SAjPaRp9KL1FJonpi64CSM8ZHmxfeM_2QqA"
               target="_blank">temblores.org</a>
-          </p>
+          </p> -->
         </div>
       </div>
 
@@ -279,7 +280,8 @@
       <div class="section-title">
         <h2>Derecho a la ciudad</h2>
         <div class="descripcion-categoria">
-          <p>
+          <p>Derecho a la ciudad se refiere a los derechos que tiene población que ha llegado a habitar en las periferias de la ciudad en condiciones de exclusión, negación de derechos y discriminación extrema como los habitantes de calle, vendedores ambulantes, personas que ejercen el trabajo sexual y migrantes de otros países como Venezuela.</p>
+          <!-- <p>
             El 54% de la población mundial vive en las ciudades y la población
             colombiana no es la excepción. Es más, las dinámicas de conflicto
             armado que han azotado la historia del país incrementaron el
@@ -316,7 +318,7 @@
             remítase a:
             <a href="https://la.network/consiste-derecho-la-ciudad/"
               target="_blank">la.network/consiste-derecho-la-ciudad</a>
-          </p>
+          </p> -->
         </div>
       </div>
 
@@ -348,7 +350,8 @@
         <h3>
           En su opinión, los habitantes de calle son
           <span class="info-link">maltratados físicamente</span>
-          por:
+          por: 
+          <span class="posibles-r">(Puede escoger hasta dos respuestas)</span>
           <div class="descripcion">
             <p>
               Para mayor información acerca del maltrato y homicidio de las
@@ -429,7 +432,8 @@
       <div class="section-title">
         <h2>Cárceles y drogas</h2>
         <div class="descripcion-categoria">
-          <p>
+          <p>Los temas de cárceles y drogas se refieren a los derechos que tienen las personas que consumen drogas y la necesidad o no de penalizar ese consumo o regularlo.</p>
+          <!-- <p>
             Desde Temblores ONG, se ha observado que existe un particular
             perfilamiento hacia las personas que consumen drogas. A estas, se
             les cataloga como delincuentes o enfermos y, por ende, la forma de
@@ -453,7 +457,7 @@
             según el Gobierno, remítase a:
             <a href="http://www.odc.gov.co/problematica-drogas/consumo-drogas/situacion-consumo"
               target="_blank">odc.gov.co/problematica-drogas/consumo-drogas/situacion-consumo</a>
-          </p>
+          </p> -->
         </div>
       </div>
 
@@ -497,6 +501,7 @@
         <h3>
           ¿Con cuál de estas afirmaciones está usted de acuerdo sobre la dosis
           mínima de <span class="info-link">drogas</span>?
+          <span class="posibles-r">(Puede escoger hasta dos respuestas)</span>
           <div class="descripcion">
             <p>
               "Desde el 1 de octubre [de 2018] entró en vigencia un decreto
@@ -568,7 +573,8 @@
         </h2>
 
         <div class="descripcion-categoria">
-          <p>
+          <p>Estas preguntas se refieren a los mecanismos para implementar políticas de seguridad con apoyo de Agentes de Seguridad del Estado (como la Policía o el Esmad) y que pueden terminar en situaciones de violencia policial o uso excesivo de la fuerza.</p>
+          <!-- <p>
             El Sistema Callejero de Documentación y Registro de Violencias
             Policiales pretende construir mecanismos accesibles de justicia para
             las ciudadanías que son sistemáticamente violentadas por miembros de
@@ -588,7 +594,7 @@
             informe de Temblores ONG "Los Nunca Nadie":
             <a href="https://issuu.com/temblores/docs/los_nunca_nadie__informe_sobre_la_s"
               target="_blank">issuu.com/temblores/docs/los_nunca_nadie__informe_sobre_la_s</a>
-          </p>
+          </p> -->
         </div>
       </div>
 
@@ -661,6 +667,7 @@
         <h3>
           ¿Con cuál de estas afirmaciones está usted de acuerdo, frente al
           Escuadrón Móvil Antidisturbios <span class="info-link">(ESMAD)</span>?
+          <span class="posibles-r">(Puede escoger hasta dos respuestas)</span>
 
           <div class="descripcion">
             <p>
@@ -729,6 +736,7 @@
           La Corte Constitucional tumbó la prohibición para consumir bebidas
           alcohólicas y sustancias psicoactivas en el espacio público. Frente a
           esa decisión, usted cree <span class="info-link">que:</span>
+          <span class="posibles-r">(Puede escoger hasta dos respuestas)</span>
 
           <div class="descripcion">
             <p>
@@ -799,6 +807,8 @@
         <h3>
           En su opinión, ¿cuál de estos ejemplos representa lo que es un líder
           <span class="info-link">social</span>?
+
+          <span class="posibles-r">(puede escoger tantas respuestas como quiera)</span>
 
           <div class="descripcion">
             <p>
