actualizar url y limpiar

--- a/0.html
+++ b/0.html
@@ -1,57 +1,136 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <!-- Primary Meta Tags -->
+    <title>Buen Partido</title>
+    <meta name="title" content="Buen Partido" />
+    <meta
+      name="description"
+      content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <!-- Primary Meta Tags -->
-  <title>Buen Partido</title>
-  <meta name="title" content="Buen Partido">
-  <meta name="description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cerosetenta.uniandes.edu.co/buenpartido/0.html"
+    />
+    <meta property="og:title" content="Buen Partido" />
+    <meta
+      property="og:description"
+      content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral"
+    />
+    <meta
+      property="og:image"
+      content="https://cerosetenta.uniandes.edu.co/buenpartido//imgs/miBuenPartidoesHOLLMAN-MORRIS.jpg"
+    />
+    <meta property="fb:app_id" content="481310545785663" />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://1cgonza.github.io/buen-partido/0.html">
-  <meta property="og:title" content="Buen Partido">
-  <meta property="og:description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
-  <meta property="og:image" content="https://1cgonza.github.io/buen-partido//imgs/miBuenPartidoesHOLLMAN-MORRIS.jpg">
-  <meta property="fb:app_id" content="481310545785663">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://cerosetenta.uniandes.edu.co/buenpartido/0.html"
+    />
+    <meta property="twitter:title" content="Buen Partido" />
+    <meta
+      property="twitter:description"
+      content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral"
+    />
+    <meta
+      property="twitter:image"
+      content="https://cerosetenta.uniandes.edu.co/buenpartido/imgs/miBuenPartidoesHOLLMAN-MORRIS.jpg"
+    />
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://1cgonza.github.io/buen-partido/0.html">
-  <meta property="twitter:title" content="Buen Partido">
-  <meta property="twitter:description"
-    content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
-  <meta property="twitter:image"
-    content="https://1cgonza.github.io/buen-partido/imgs/miBuenPartidoesHOLLMAN-MORRIS.jpg">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./imgs/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./imgs//apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./imgs//apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./imgs//apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./imgs//apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./imgs//apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./imgs//apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./imgs//apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./imgs//apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./imgs//android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./imgs//favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./imgs//favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./imgs//favicon-16x16.png"
+    />
+    <link rel="manifest" href="./imgs//manifest.json" />
+    <meta name="msapplication-TileColor" content="#087E8B" />
+    <meta
+      name="msapplication-TileImage"
+      content="./imgs//ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#087E8B" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Jura|Quantico&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="apple-touch-icon" sizes="57x57" href="./imgs/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./imgs//apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./imgs//apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./imgs//apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./imgs//apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./imgs//apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./imgs//apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./imgs//apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./imgs//apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./imgs//android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./imgs//favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./imgs//favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./imgs//favicon-16x16.png">
-  <link rel="manifest" href="./imgs//manifest.json">
-  <meta name="msapplication-TileColor" content="#087E8B">
-  <meta name="msapplication-TileImage" content="./imgs//ms-icon-144x144.png">
-  <meta name="theme-color" content="#087E8B">
-  <link href="https://fonts.googleapis.com/css?family=Jura|Quantico&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
-
-<body>
-  <script>
-    window.location.href = "https://1cgonza.github.io/buen-partido/";
-  </script>
-</body>
-
+  <body>
+    <script>
+      window.location.href = 'https://cerosetenta.uniandes.edu.co/buenpartido';
+    </script>
+  </body>
 </html>
