--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://1cgonza.github.io/buen-partido/">
+  <meta property="og:url" content="https://cerosetenta.uniandes.edu.co/buenpartido/">
   <meta property="og:title" content="Buen Partido">
   <meta property="og:description" content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
-  <meta property="og:image" content="https://1cgonza.github.io/buen-partido/imgs/og.jpg">
+  <meta property="og:image" content="https://cerosetenta.uniandes.edu.co/buenpartido/imgs/og.jpg">
   <meta property="fb:app_id" content="481310545785663">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://1cgonza.github.io/buen-partido/">
+  <meta property="twitter:url" content="https://cerosetenta.uniandes.edu.co/buenpartido/">
   <meta property="twitter:title" content="Buen Partido">
   <meta property="twitter:description"
     content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
-  <meta property="twitter:image" content="https://1cgonza.github.io/buen-partido/imgs/og.jpg">
+  <meta property="twitter:image" content="https://cerosetenta.uniandes.edu.co/buenpartido/imgs/og.jpg">
 
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
